# PowerMCP

./: .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
ANDES/: andes_mcp.py
Egret/: egret_mcp.py
HOPE/: README.md
HOPE/src/hope_mcp_server/: core.py
HOPE/tests/: test_path_traversal.py
LTSpice/: ltspice_mcp.py
NARP/: README.md  __init__.py  narp_mcp.py  output.txt
NARP/mcp_server/: README.md  __init__.py  manager.py  server.py  worker.py
NARP/reliabilityassessment/data_processing/: datax.py  dpeak.py  gsm.py  resca.py  smaint.py  wpeakf.py  xports.py
NARP/reliabilityassessment/monte_carlo/: admitr.py  events.py  findld.py  flo.py  hour.py  hrstat.py  intm.py  linp.py  net.py  pkstat.py  remove.py  report.py  rstart.py  sumcap.py  theta.py  thetac.py  tm1.py  transm.py  ximpa.py  ximpar.py
OpenDSS/: README.md  opendss_mcp.py  requirements.txt
OpenDSS/13Bus/: IEEE13Nodeckt.dss
OpenDSS/core/: __init__.py  engine.py  server.py  state.py
OpenDSS/opendss_tools/: __init__.py  configuration.py  interactive_view.py  model.py  results.py  simulation.py
OpenDSS/utils/: __init__.py  responses.py
PSCAD/pscad_mcp/core/: connection_manager.py  errors.py  executor.py
PSCAD/pscad_mcp/tools/: app_tools.py  data_tools.py  project_tools.py
PSCAD/pscad_mcp/utils/: doc_manager.py
PSCAD/tests/: test_enhanced_tools.py  test_tools.py
PSLF/: pslf_mcp.py
PSSE/: psse_mcp.py
PowerFactory/: Agent_DIgSILENT.py  IEEE39.pfd  INSTALL.txt  MCP_PowerFactory.py  README.md  functions_overview.txt  requirements.txt  simulation_config.example.json
PyPSA/: pypsa_mcp.py
pandapower/: panda_mcp.py
pandapower_tools/: tools.py
powerio/: powerio_mcp.py
powermcp/: README.md  __init__.py  __main__.py  cli.py  config.py  detect.py  doctor.py  paths.py  registry.py  runner.py  wizard.py
powermcp/clients/: __init__.py  _common.py  claude_code.py  claude_desktop.py  codex.py
surge/: DISPATCH_REQUEST_SCHEMA.json  README.md  requirements.txt  surge_mcp.py  test_integration.py
tests/: conftest.py  test_clients.py  test_config.py  test_detect.py  test_doctor.py  test_powerio_server.py  test_registry.py  test_runner.py  test_vendor_import.py  test_wizard.py
