# PowerMCP — single pip-installable distribution that bundles every power-system
# MCP server. The server source lives in the existing top-level dirs (PSSE/,
# pandapower/, ...) and stays runnable standalone; this build maps those dirs
# verbatim into the wheel under powermcp/_servers/ via hatchling force-include
# (zero source mutation, preserves data files like PSSE's 2184 JSON command specs
# and OpenDSS's case-sensitive .DSS files).
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "powermcp"
version = "0.1.1"
description = "MCP servers for power-system software (PowerWorld, OpenDSS, PSS/E, pandapower, PyPSA, and more)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "PowerMCP contributors" }]
keywords = ["mcp", "power systems", "energy", "simulation", "pandapower", "pypsa", "powerworld", "opendss", "pss/e"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

# CORE — always installed by `pip install powermcp`.
# Only pandapower + PyPSA engines (per project decision); the rest is the MCP
# runtime plus the CLI/installer toolkit.
dependencies = [
    "pandapower",
    "pypsa>=0.25.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "mcp>=1.0",
    # CLI / installer toolkit:
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13",
    "tomli-w>=1.0",
    "tomlkit>=0.13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# --- open-source tool engines ---
andes      = ["andes"]
egret      = ["gridx-egret", "pyomo"]          # PyPI dist is `gridx-egret`; imports as `egret`
opendss    = ["py_dss_toolkit"]
ltspice    = ["PyLTSpice", "matplotlib"]
surge      = ["surge-py>=0.1.5; python_version >= '3.12' and python_version < '3.15'"]
hope       = ["PyYAML>=6.0"]
powerio    = ["powerio[mcp,matrix]>=0.1.1"]
# --- closed-source / vendor tool engines ---
powerworld = ["esa", "numba"]                   # esa auto-discovers a running Simulator via COM.
                                                # numba is required: esa 1.3.5's no-numba code path
                                                # is broken (NameError in _performance_jit), so the
                                                # JIT accelerator must be present for `import esa`.
pscad      = ["psutil"]                         # mhi-pscad pulled by the `pscad-windows` extra
pscad-windows = ["psutil", "mhi-pscad; sys_platform == 'win32'", "mhi-psout; sys_platform == 'win32'"]
psse       = []                                 # vendor `psspy` not on PyPI — path captured in config.toml
pslf       = ["pandas"]                         # vendor `PSLF_PYTHON` not on PyPI — path captured in config.toml
powerfactory = ["fastmcp>=2.0", "numpy>=1.26", "matplotlib>=3.8", "pandas>=1.5"]  # vendor `powerfactory` not on PyPI
# --- convenience groups ---
opensource = ["powermcp[andes]", "powermcp[egret]", "powermcp[opendss]", "powermcp[ltspice]", "powermcp[surge]", "powermcp[hope]", "powermcp[powerio]"]
windows    = ["powermcp[pscad-windows]", "powermcp[powerworld]", "powermcp[powerfactory]", "powermcp[psse]", "powermcp[pslf]"]
all        = ["powermcp[opensource]", "powermcp[powerworld]", "powermcp[powerfactory]", "powermcp[pscad-windows]", "powermcp[psse]", "powermcp[pslf]"]

[project.urls]
Homepage = "https://github.com/Power-Agent/PowerMCP"
Repository = "https://github.com/Power-Agent/PowerMCP"

[project.scripts]
powermcp = "powermcp.cli:main"

# ---------------------------------------------------------------------------
# Wheel: ship the powermcp core package, then force-include each server dir
# verbatim under powermcp/_servers/<Dir> so it resolves via
# importlib.resources.files("powermcp") in an installed wheel.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["powermcp"]

[tool.hatch.build.targets.wheel.force-include]
"pandapower"   = "powermcp/_servers/pandapower"
"PyPSA"        = "powermcp/_servers/PyPSA"
"ANDES"        = "powermcp/_servers/ANDES"
"Egret"        = "powermcp/_servers/Egret"
"surge"        = "powermcp/_servers/surge"
"OpenDSS"      = "powermcp/_servers/OpenDSS"
"HOPE"         = "powermcp/_servers/HOPE"
"powerio"      = "powermcp/_servers/powerio"
"PSCAD"        = "powermcp/_servers/PSCAD"
"PSSE"         = "powermcp/_servers/PSSE"
"PSLF"         = "powermcp/_servers/PSLF"
"PowerWorld"   = "powermcp/_servers/PowerWorld"
"PowerFactory" = "powermcp/_servers/PowerFactory"
"LTSpice"      = "powermcp/_servers/LTSpice"

# The sdist must contain the server dirs at the repo root so that the
# build-wheel-from-sdist step (used by `python -m build`) can force-include them.
[tool.hatch.build.targets.sdist]
include = [
    "powermcp",
    "pandapower", "PyPSA", "ANDES", "Egret", "surge", "OpenDSS", "HOPE", "powerio",
    "PSCAD", "PSSE", "PSLF", "PowerWorld", "PowerFactory", "LTSpice",
    "README.md", "LICENSE", "pyproject.toml",
]
exclude = [
    "**/__pycache__", "**/*.py[cod]", "**/.pytest_cache",
    "PSCAD/tests", "HOPE/tests",
]
